VR: Fix omnibox text input sizing while incognito

BUG=834318

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: Ib1023da9cd09a3291725aa539fdfa044356a7e81
Reviewed-on: https://chromium-review.googlesource.com/1016691
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551717}
Former-commit-id: c14c5bca6ecfa5ede0db05343e83628978985ded